# permutation_generator

./: CMakeLists.txt  README.md  main.cpp  report.md
include/: permutations.hpp
include/algorithms/: log_permutation.hpp  sjt_permutation.hpp  std_permutation.hpp
